<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="40dp"
    android:background="@drawable/menu"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="333dp"
        android:layout_height="313dp"
        android:background="#00FFFEFE"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.373">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="15px"
            android:layout_marginBottom="40dp"
            android:background="#BC2E353C"
            android:fontFamily="@font/aclonica"
            android:gravity="center"
            android:hint="@string/canciones"
            android:onClick="musica"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFDFD"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginTop="15px"
            android:layout_marginBottom="40dp"
            android:background="#BC2E353C"
            android:fontFamily="@font/aclonica"
            android:gravity="center"
            android:hint="@string/anime"
            android:onClick="anime"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFDFD"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginTop="15px"
            android:layout_marginBottom="40dp"
            android:background="#BC2E353C"
            android:fontFamily="@font/aclonica"
            android:gravity="center"
            android:hint="@string/libros"
            android:onClick="libros"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFDFD"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>