<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/libros"
    tools:context=".MainActivity4">

    <LinearLayout
        android:layout_width="343dp"
        android:layout_height="222dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/aclonica"
            android:hint="@string/btn_listaL"
            android:onClick="verListadoLibros"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp"
            app:backgroundTint="#97404147" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/aclonica"
            android:hint="@string/btn_ingresarL"
            android:onClick="ingresarLibro"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp"
            app:backgroundTint="#9F404147" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/aclonica"
            android:hint="@string/btn_eliminarL"
            android:onClick="eliminarLibro"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp"
            app:backgroundTint="#AB404147" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/aclonica"
        android:text="LIBROS"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>