<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/musica"
    tools:context=".MainActivity3">

    <LinearLayout
        android:layout_width="343dp"
        android:layout_height="351dp"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.028">

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/aclonica"
            android:hint="@string/btn_listaC"
            android:onClick="verListadoCanciones"
            android:textColor="#000000"
            android:textColorHint="#070707"
            android:textSize="20sp"
            app:backgroundTint="#8BF9FAFD" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/aclonica"
            android:hint="@string/btn_ingresarC"
            android:onClick="ingresarCancion"
            android:textColor="#000000"
            android:textColorHint="#070707"
            android:textSize="20sp"
            app:backgroundTint="#8BF9FAFD" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/aclonica"
            android:hint="@string/btn_eliminarC"
            android:onClick="eliminarCancion"
            android:textColor="#000000"
            android:textColorHint="#070707"
            android:textSize="20sp"
            app:backgroundTint="#8BF9FAFD" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/aclonica"
        android:text="CANCIONES"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>